--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,7 @@ dev_dependencies:
   lottie: ^0.6.0
   flutter_svg: ^0.19.0
   animated_text_kit: ^2.4.0
-  flip_card: ^0.4.4
+  carousel_slider: ^1.3.0
 
 
 # For information on the generic Dart part of this file, see the
