--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
     sdk: flutter
   firebase_database: ^4.0.0
   firebase_core: ^0.5.0
+  flutter_facebook_login: ^1.2.0
+  google_sign_in: ^4.0.1+1
+  firebase_auth: ^0.8.1+4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -46,12 +49,13 @@ dev_dependencies:
   e2e: ^0.6.1
   font_awesome_flutter: ^8.8.1
   flutter_screenutil: ^2.1.0
-  assets_audio_player: ^2.0.10
   flutter_offline: "^0.3.0"
   lottie: ^0.6.0
   flutter_svg: ^0.19.0
   carousel_slider: ^1.3.0
+  shared_preferences: ^0.5.12+4
 
+  #assets_audio_player: ^2.0.10
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
