--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,7 @@ dev_dependencies:
   flutter_svg: ^0.19.0
   carousel_slider: ^2.3.1
   shared_preferences: ^0.5.12+4
-
+  shape_of_view: ^1.0.2
   #assets_audio_player: ^2.0.10
 
 # For information on the generic Dart part of this file, see the
@@ -64,7 +64,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/audios/sword_sms.mp3
+    - assets/audios/
     - assets/animations/gifs/
     - assets/animations/lottiefiles/
     - assets/icons/
