--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,9 @@ dev_dependencies:
   carousel_slider: ^2.3.1
   shared_preferences: ^0.5.12+4
   shape_of_view: ^1.0.2
+  flutter_animator: ^2.1.0
+  provider: ^4.3.2+3
+
   #assets_audio_player: ^2.0.10
 
 # For information on the generic Dart part of this file, see the
