--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -66,4 +66,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:18.0.0'
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'com.google.android.gms:play-services-basement:17.5.0'
+    implementation 'com.google.firebase:firebase-messaging'
 }
