--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_facebook_login: ^1.2.0
   google_sign_in: ^4.0.1+1
   firebase_auth: ^0.8.1+4
+  firebase_messaging: ^7.0.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
