--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   google_sign_in: ^4.0.1+1
   firebase_auth: ^0.8.1+4
   firebase_messaging: ^7.0.3
+  flutter_local_notifications: ^3.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -44,10 +45,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   http: ^0.12.0+2
-  rxdart: ^0.24.1
+  rxdart: ^0.25.0
   intl: ^0.16.1
   test: any
-  e2e: ^0.6.1
+  e2e: ^0.7.0+1
   font_awesome_flutter: ^8.8.1
   flutter_screenutil: ^2.1.0
   flutter_offline: "^0.3.0"
