--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dev_dependencies:
   shape_of_view: ^1.0.2
   flutter_animator: ^2.1.0
   provider: ^4.3.2+3
+  cached_network_image: ^2.5.0
 
   #assets_audio_player: ^2.0.10
 
