--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dev_dependencies:
   provider: ^4.3.2+3
   cached_network_image: ^2.5.0
   bot_toast: ^3.0.5
+  audioplayers: ^0.17.3
 
   #assets_audio_player: ^2.0.10
 
