--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ dev_dependencies:
   cached_network_image: ^2.5.0
   bot_toast: ^3.0.5
   audioplayers: ^0.17.3
+  flutter_staggered_grid_view: ^0.3.3
+  transparent_image: ^1.0.0
 
   #assets_audio_player: ^2.0.10
 
