--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,46 +24,43 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_database: ^4.3.0
-  firebase_core: ^0.5.2
-  flutter_facebook_login: ^1.2.0
-  google_sign_in: ^4.0.1+1
-  firebase_auth: ^0.8.1+4
+  firebase_database: ^6.0.0
+  firebase_core: ^0.7.0
+  flutter_facebook_login: ^3.0.0
+  google_sign_in: ^4.5.9
+  firebase_auth: ^0.20.0+1
   firebase_messaging: ^7.0.3
-  flutter_local_notifications: ^3.0.2
+  flutter_local_notifications: ^4.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
+  cupertino_icons: ^1.0.2
 
 dependency_overrides:
-  firebase_core: ^0.5.2
+  firebase_core: ^0.7.0
 
 
 dev_dependencies:
-  pedantic: ^1.8.0
+  pedantic: ^1.9.2
   flutter_test:
     sdk: flutter
-  http: ^0.12.0+2
+  http: ^0.12.2
   rxdart: ^0.25.0
-  intl: ^0.16.1
   test: any
   e2e: ^0.7.0+1
-  font_awesome_flutter: ^8.8.1
-  flutter_screenutil: ^2.1.0
+  font_awesome_flutter: ^8.11.0
+  flutter_screenutil: ^4.0.2+8
   flutter_offline: ^0.3.0
   lottie: ^0.7.0+1
   flutter_svg: ^0.19.2+1
-  carousel_slider: ^2.3.1
+  carousel_slider: ^3.0.0
   shared_preferences: ^0.5.12+4
   shape_of_view: ^1.0.2
   flutter_animator: ^2.1.0
-  provider: ^4.3.2+3
+  provider: ^4.3.3
   cached_network_image: ^2.5.0
   bot_toast: ^3.0.5
   audioplayers: ^0.17.3
-  flutter_staggered_grid_view: ^0.3.3
-  transparent_image: ^1.0.0
 
   #assets_audio_player: ^2.0.10
 
